--- a/scss/sections/portfolio.scss
+++ b/scss/sections/portfolio.scss
@@ -15,7 +15,7 @@
     height: 18.5rem;
     overflow: hidden;
     margin-bottom: 1.2rem;
-    border-top: 0.5rem solid lighten($primary, 20%);
+    border-top: 0.5rem  solid lighten($primary, 20%);
 
     img {
         width: 100%;
@@ -33,29 +33,26 @@
         visibility: hidden;
 
         .caption {
-            text-align: center;
-            color: $white; // Default color
-            @include absoluteCenter;
+        text-align: center;
+        color: $white;
+        @include absoluteCenter;
 
             h4 {
                 text-transform: uppercase;
                 display: block;
-                transition: color 0.3s ease; // Smooth transition for text color
             }
         }
     }
-
     &:hover {
+
         img {
             transform: scale(1.5);
             @include transitionProperty;
         }
-
         .portfolio-info {
             opacity: 1;
             visibility: visible;
             @include transitionProperty;
-
             .caption {
                 h4 {
                     color: black; // Make text dark black on hover
@@ -64,4 +61,3 @@
         }
     }
 }
-
