--- a/scss/sections/portfolio.scss
+++ b/scss/sections/portfolio.scss
@@ -23,7 +23,7 @@
     }
 
     .portfolio-info {
-        background-color: rgba($primary, 0.75);
+        background-color: rgba(0, 0, 0, 0.85);
         width: 100%;
         height: 100%;
         position: absolute;
@@ -31,6 +31,7 @@
         left: 0;
         opacity: 0;
         visibility: hidden;
+        transition: all 0.3s ease;
 
         .caption {
         text-align: center;
@@ -52,6 +53,7 @@
         .portfolio-info {
             opacity: 1;
             visibility: visible;
+            background-color: rgba(0,0,0,0.9);
             @include transitionProperty;
             .caption {
                 h4 {
